add and near to completing "gamma correction"

--- a/Book_test.tex
+++ b/Book_test.tex
@@ -16,7 +16,8 @@
 
 \usepackage{graphicx}
 \graphicspath{ {./contents/chapter3/spatial_transformations/histogram_processing/global/1_negative/negative_lab/}
-{/contents/chapter3/spatial_transformations/histogram_processing/global/2_logarithmic/} }
+{/contents/chapter3/spatial_transformations/histogram_processing/global/2_logarithmic/}
+{/contents/chapter3/spatial_transformations/histogram_processing/global/3_gamma/} }
 
 \usepackage{csquotes}
 
@@ -79,6 +80,8 @@ This part is from `chapter 3' of Gonzalez.
 % Logarithmic transformation >>  
 \import{./contents/chapter3/spatial_transformations/histogram_processing/global/2_logarithmic}{2_logarithmic.tex}
 
+% Gamma transformation >>  
+\import{./contents/chapter3/spatial_transformations/histogram_processing/global/3_gamma}{3_gamma.tex}
 
 \chapter{Chapter two}
 
