* properties of "point processing"

--- a/Book_test.tex
+++ b/Book_test.tex
@@ -75,6 +75,9 @@ This part is from `chapter 3' of Gonzalez.
 
 \chapter{Histogram Processing}
 
+\section{Histograms}
+\import{./contents/chapter3/spatial_transformations/histogram_processing/}{histograms.tex}
+
 \section{Global}
 
 % negative subsection >> 
