* disable "full screen mode" on launching PDF file * change "linkcolor" of "hyperref" package

--- a/Book_test.tex
+++ b/Book_test.tex
@@ -24,12 +24,12 @@
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
-    linkcolor=blue,
+    linkcolor=brown,
     filecolor=magenta,      
     urlcolor=cyan,
     pdftitle={Image processing},
-    pdfpagemode=FullScreen,
-    }
+    %pdfpagemode=FullScreen,
+}
 
 \usepackage{fontspec}
 \newfontfamily\verbatimfont{Fira Code}[NFSSFamily=myverbatimfont_for_box_characters]
