* change color of 	- page 	- font

--- a/Book_test.tex
+++ b/Book_test.tex
@@ -34,6 +34,9 @@
 \usepackage{fontspec}
 \newfontfamily\verbatimfont{Fira Code}[NFSSFamily=myverbatimfont_for_box_characters]
 
+\pagecolor{black} % set the page colour to black
+\color{white} % set the default colour to white
+
 \title{My first book}
 \author{Me}
 \date{\today}
@@ -45,9 +48,6 @@
 \hangindent3em \emph{Care}: #1}
 
 \begin{document}
-
-% \pagecolor{black} % set the page colour to black
-% \color{white} % set the default colour to white
 
 \maketitle
 
