* Enable suppressing "float" * suppressing floating property of "\label{fig:logarithmic_on_dark_image}"

--- a/Book_test.tex
+++ b/Book_test.tex
@@ -34,6 +34,8 @@
 \usepackage{fontspec}
 \newfontfamily\verbatimfont{Fira Code}[NFSSFamily=myverbatimfont_for_box_characters]
 
+\usepackage{float}
+
 \pagecolor{black} % set the page colour to black
 \color{white} % set the default colour to white
 
